// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useNotificationTemplateAbility should report Create / Update / Delete aren't supported for vanilla prometheus alertmanager 1`] = `
{
  "create": {
    "anyOfPermissions": [
      "alert.notifications:write",
      "alert.notifications.templates:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "delete": {
    "anyOfPermissions": [
      "alert.notifications:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "update": {
    "anyOfPermissions": [
      "alert.notifications:write",
      "alert.notifications.templates:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
}
`;

exports[`useNotificationTemplateAbility should report template actions for Mimir alertmanager 1`] = `
{
  "create": {
    "anyOfPermissions": [
      "alert.notifications:write",
      "alert.notifications.templates:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "view": {
    "anyOfPermissions": [
      "alert.notifications:read",
      "alert.notifications.templates:read",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
}
`;
